# Kagami

./: .gitignore  CMakeLists.txt  copy.sh  main.cpp
include/: dev.hpp  err.h  net.hpp
include/client/: client.hpp
include/common/: err.h  event.h  net.h  uinput.h
include/server/: helper.h  server.hpp
src/: dev.cpp  main.c  net.cpp
src/client/: client.cpp  helper.c  main.c
src/common/: err.c  event.c  net.c  uinput.c
src/server/: helper.c  main.c  server.cpp
